# oot

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .undefined_syms.txt.swp  32 currentFrame  32 sp34  COPYING  Dockerfile  Doxyfile  Jenkinsfile  MQUD Fixed Scenes V5 magic bean Object fixes Navi c up fix V2 ST fix stalfos R fix OT fix & Cucco in LH AAA with unused content Gerudo Valley & Zora Fountain fixes V3.n64:Zone.Identifier  Makefile  Makefile.save  Makefile:Zone.Identifier  OOTrombuild.sh  README-OSX.md  README.md  README_OSX.md  THANKS.md  addTlutOffsets.py  addTlutOffsets.py:Zone.Identifier  audio_rsp.s  base.c  baserom.ram  baserom.z64.txt  baserom_files.mk  checksum.md5  checksum_old.md5  checksum_uncompressed.gc-eu-mq-dbg.md5  ctx.c  d  diff.py  diff.txt  diff2.py  diff_settings.py  docker-compose.yml  docker-sync.yml  (+52 more)
LICENSES/: README.md
asm/: PreRender.s  __osDisableInt.s  __osGetCause.s  __osGetFpcCsr.s  __osGetSR.s  __osProbeTLB.s  __osRestoreInt.s  __osSetCompare.s  __osSetFpcCsr.s  __osSetSR.s  __osSetWatchLo.s  bcmp.s  bcopy.s  bzero.s  code_8006BA00.s  code_8008E4E0.s  code_8008E6A0.s  code_80092500.s  code_800ACE70.s  code_800AD920.s  code_800B2400.s  code_800B29D0.s  code_800B2E30.s  code_800B34E0.s  code_800BB0A0.s  code_800BB570.s  code_800C3C20.s  code_800D2E30.s  (+103 more)
tools/asm-differ/: .gitignore  .gitrepo  .pre-commit-config.yaml  README.md  diff-stylesheet.css  diff.py  diff_settings.py  mypy.ini  pyproject.toml  test.py
tools/asm-differ/.github/workflows/: black.yml  check-poetry-lock.yml  unit-tests.yml
(+34502 files in other folders)
